bk_ida/gccida/c3/df_bb_reg_def_chain_create
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_def_chain_create/src/df.c:1803:4: error: expected ';' after expression
rtx insn; // [rsp+28h] [rbp-18h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_def_chain_create/src/df.c:1803:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+28h] [rbp-18h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_def_chain_create/src/df.c:1805:7: error: use of undeclared identifier 'insn'
for ( insn = bb->end; ; insn = ( rtx)insn[1] ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_def_chain_create/src/df.c:1805:25: error: use of undeclared identifier 'insn'
for ( insn = bb->end; ; insn = ( rtx)insn[1] ) 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_def_chain_create/src/df.c:1805:38: error: expected ')'
for ( insn = bb->end; ; insn = ( rtx)insn[1] ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_def_chain_create/src/df.c:1805:5: note: to match this '('
for ( insn = bb->end; ; insn = ( rtx)insn[1] ) 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_def_chain_create/src/df.c:1808:6: error: use of undeclared identifier 'insn'
if ( insn ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_def_chain_create/src/df.c:1809:6: error: use of undeclared identifier 'insn'
v3 = insn != ( rtx)bb->head[1]; 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_def_chain_create/src/df.c:1812:47: error: use of undeclared identifier 'insn'
if ( rtx_class[( unsigned __int16)*( _DWORD *)insn] == 105 ) 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_def_chain_create/src/df.c:1814:26: error: use of undeclared identifier 'insn'
for ( link = df_0->insns[insn->fld[0].rtuint].defs; link; link = link->next ) 
                         ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_def_chain_create/src/obj/df.o] Error 1
